[tool.poetry]
name = "aiohttp-homework"
version = "0.1.0"
description = ""
authors = ["korpaxdev <korpaxdev@gmail.com>"]
readme = "README.md"
packages = [{include = "aiohttp_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
sqlalchemy = "^2.0.17"
aiosqlite = "^0.19.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
